scripts/nullaway/original/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8.txt
../original/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/DynamicCaseContext.java:35: error: [NullAway] initializer method does not guarantee @NonNull fields failCause (line 24), caseName (line 26) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public DynamicCaseContext(List<DimensionValuePair> set) {
           ^
    (see http://t.uber.com/nullaway )
../original/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/DynamicCaseContext.java:309: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/DynamicCaseContext.java:361: error: [NullAway] returning @Nullable expression from method with @NonNull return type
                return null;
                ^
    (see http://t.uber.com/nullaway )
../original/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/dimensions/DefaultDimension.java:20: error: [NullAway] initializer method does not guarantee @NonNull fields enumClass (line 7), alias (line 9) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public DefaultDimension() {
           ^
    (see http://t.uber.com/nullaway )
../original/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/processors/DynamicCaseProcessor.java:196: error: [NullAway] unboxing of a @Nullable value
            constraintSequence[index] = constraintDimension.value();
                               ^
    (see http://t.uber.com/nullaway )
../original/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/report/ExcelFormatTestReporter.java:26: error: [NullAway] initializer method does not guarantee @NonNull field currentSheet (line 19) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public ExcelFormatTestReporter(final String fileName) {
           ^
    (see http://t.uber.com/nullaway )
../original/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/DynamicDemo.java:25: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            new Processor().doProcess(new DefaultTestContext(null, DynamicDemo.class, m, null),
                                                             ^
    (see http://t.uber.com/nullaway )
../original/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/DynamicDemo.java:25: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            new Processor().doProcess(new DefaultTestContext(null, DynamicDemo.class, m, null),
                                                                                         ^
    (see http://t.uber.com/nullaway )
../original/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/dimensions/DefaultPairDimension.java:10: error: [NullAway] @NonNull field oneExpression not initialized
    protected String oneExpression;
                     ^
    (see http://t.uber.com/nullaway )
../original/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/dimensions/DefaultPairDimension.java:11: error: [NullAway] @NonNull field otherExpression not initialized
    protected String otherExpression;
                     ^
    (see http://t.uber.com/nullaway )
../original/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/dimensions/DefaultObjectDimension.java:10: error: [NullAway] @NonNull field oneExpression not initialized
    protected String oneExpression;
                     ^
    (see http://t.uber.com/nullaway )
../original/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/explorers/ExhaustiveExploreStrategy.java:95: error: [NullAway] @NonNull field callback not initialized
    private ICombinationHandler callback;
                                ^
    (see http://t.uber.com/nullaway )
../original/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/explorers/ExhaustiveExploreStrategy.java:30: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            this(dimension, null);
                            ^
    (see http://t.uber.com/nullaway )
../original/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/explorers/ExhaustiveExploreStrategy.java:121: error: [NullAway] unboxing of a @Nullable value
                return dimensionIndex.get(o1.getDottedName()) - dimensionIndex.get(o2.getDottedName());
                                         ^
    (see http://t.uber.com/nullaway )
../original/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/explorers/ExhaustiveExploreStrategy.java:121: error: [NullAway] unboxing of a @Nullable value
                return dimensionIndex.get(o1.getDottedName()) - dimensionIndex.get(o2.getDottedName());
                                                                                  ^
    (see http://t.uber.com/nullaway )
../original/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/GlobalTestContext.java:157: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return functions.get(key);
            ^
    (see http://t.uber.com/nullaway )
../original/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/utilities/ClassUtils.java:22: error: [NullAway] dereferenced expression field is @Nullable
            field.setAccessible(true);
                 ^
    (see http://t.uber.com/nullaway )
../original/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/utilities/ClassUtils.java:65: error: [NullAway] dereferenced expression field is @Nullable
            if ( field.isAccessible() ) {
                      ^
    (see http://t.uber.com/nullaway )
../original/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/utilities/ClassUtils.java:99: error: [NullAway] dereferenced expression field is @Nullable
        if ( !field.isAccessible() ) {
                   ^
    (see http://t.uber.com/nullaway )
../original/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/utilities/ScriptLexicalAnalyzer.java:22: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return withValue;
        ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
20 errors
